Fix vertical spacing

--- a/assets/css/pages/landing/article-thirteen.scss
+++ b/assets/css/pages/landing/article-thirteen.scss
@@ -2,8 +2,9 @@
 
 .section-article-thirteen {
   margin-top: $vertical-space;
-  padding-bottom: 5rem;
-  .header {
+  margin-bottom: $vertical-space;
+
+    .header {
     .title {
       margin: 0;
       font-size: 3.4em;
