--- a/assets/css/pages/landing/what-do.scss
+++ b/assets/css/pages/landing/what-do.scss
@@ -1,8 +1,7 @@
 @import "../../variables";
 
 .section-what-do {
-    margin-top: $vertical-space;
-    padding-bottom: 5rem;
+    margin-bottom: $vertical-space;
 
     .icon-pair {
         margin-bottom: 25px;
